<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/skin"
    android:id="@+id/MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="5dp"
            android:id="@+id/aboutCard"
            android:layout_gravity="center"
            android:layout_height="300dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/welcome"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.393"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.309" />

                <TextView
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/welcome"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/alegreya_sans_sc_italic"
                    android:text="@string/about"
                    android:textFontWeight="2"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.739" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/Faculty"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="10dp"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                android:paddingRight="10dp"
                android:text="@string/faculty"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingLeft="10dp"
                android:id="@+id/User"
                android:layout_marginLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="15sp"
                android:text="@string/user"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>